<resources>
    <string name="app_name">techtime</string>

    <!-- pay period view pager tab [CHAR LIMIT=20] -->
    <string name="category_payPeriod">Pay Period</string>

    <!-- archive view pager tab [CHAR LIMIT=20] -->
    <string name="category_archive">Archive</string>

    <!-- main menu [CHAR LIMIT=20] -->
    <string name="menu_labor_rates">Labor Rates</string>

    <!-- main menu [CHAR LIMIT=20] -->
    <string name="menu_edit_pay_period">Edit Pay Period Dates</string>

    <!-- main menu [CHAR LIMIT=20] -->
    <string name="menu_order_by">Order By</string>

    <!-- main menu [CHAR LIMIT=20] -->
    <string name="menu_end_pay_period">End Pay Period</string>

    <!-- Label to save and leave editor for labor, edit pay period and order by [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label to edit repair order in the edit repair order activity menu  [CHAR LIMIT=20] -->
    <string name="action_edit">Edit</string>

    !-- Label to delete repair order in the edit repair order activity menu  [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- pay period activity button to add repair order [CHAR LIMIT=20] -->
    <string name="add_repair_order">Add Repair Order</string>

    <!-- addEditRepairOrder activity  [CHAR LIMIT=20] -->
    <string name="edit_repair_order">Edit Repair Order</string>

    <!-- label for total hours pay period activity  [CHAR LIMIT=20] -->
    <string name="totalHoursLabel">Total Hours</string>

    <!-- label for total gross pay period activity  [CHAR LIMIT=20] -->
    <string name="totalGrossLabel">Total Gross</string>

    <!-- label for total repair order pay period activity  [CHAR LIMIT=20] -->
    <string name="totalRepairOrderLabel">Repair Orders</string>

    <!-- textView top of labor rates activity  [CHAR LIMIT=20] -->
    <string name="labor_type">Labor Type</string>

    <!-- textView top of labor rates activity  [CHAR LIMIT=20] -->
    <string name="labor_type_info">Set up the labor rates that apply to you</string>

    <!-- textView for the word Rate in labor rate activity  [CHAR LIMIT=20] -->
    <string name="rate">Rate</string>

    <!-- only used in the add edit repair order activity  [CHAR LIMIT=20] -->
    <string name="add_labor">Add Labor</string>

    <!-- textView for the word Body in labor rate activity  [CHAR LIMIT=20] -->
    <string name="Body">Body</string>

    <!-- textView for the word Mechanical in labor rate activity  [CHAR LIMIT=20] -->
    <string name="Mechanical">Mechanical</string>

    <!-- textView for the word Internal in labor rate activity  [CHAR LIMIT=20] -->
    <string name="Internal">Internal</string>

    <!-- textView for the word Warranty in labor rate activity  [CHAR LIMIT=20] -->
    <string name="Warranty">Warranty</string>

    <!-- textView for the word Refinish in labor rate activity  [CHAR LIMIT=20] -->
    <string name="Refinish">Refinish</string>

    <!-- textView for the word Glass in labor rate activity  [CHAR LIMIT=20] -->
    <string name="Glass">Glass</string>

    <!-- textView for the word Frame in labor rate activity  [CHAR LIMIT=20] -->
    <string name="Frame">Frame</string>

    <!-- textView for the word Aluminum in labor rate activity  [CHAR LIMIT=20] -->
    <string name="Aluminum">Aluminum</string>

    <!-- textView for the word Other in labor rate activity  [CHAR LIMIT=20] -->
    <string name="Other">Other</string>

    <!-- textView for the text Order By activity purpose  -->
    <string name="orderByAbout">Display the pay period to your preference</string>

    <!-- Radio button for the Ascending Order By activity  [CHAR LIMIT=20] -->
    <string name="Ascending">Ascending</string>

    <!-- Radio button for the Ascending Order By activity  [CHAR LIMIT=20] -->
    <string name="Descending">Descending</string>

    <!-- Radio button for the Ascending Order By activity  [CHAR LIMIT=20] -->
    <string name="DateOrder">Date</string>

    <!-- textView for the text Order By activity purpose  -->
    <string name="AscendingInfo">Repair order numbers listed least to greatest</string>

    <!-- textView for the text Order By activity purpose  -->
    <string name="DescendingInfo">Repair order numbers listed greatest to least</string>

    <!-- textView for the text Order By activity purpose  -->
    <string name="DateOrderInfo">Repair order dates listed earliest to most current</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="required_Info">Only the fields in blue are required</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="repair_number">Repair Order</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Writer">Writer</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Customer">Customer :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Insurance">Insurance Co :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Vehicle_title">Vehicle</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Make">Make :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Model">Model :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Year">Year :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Mileage">Mileage :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="VIN">VIN :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Color">Color :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="License">License :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Writer_repair_order">Writer :</string>

    <!-- textView for the text repair order activity  -->
    <string name="Date_repair_order">Date :</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Customer_repair_order">Customer :</string>

    <!-- textView for the text repair order activity  -->
    <string name="Insurance_repair_order">Insurance Co :</string>

    <!-- textView for the text repair order activity  -->
    <string name="Make_repair_order">Make :</string>

    <!-- textView for the text repair order activity  -->
    <string name="Model_repair_order">Model :</string>

    <!-- textView for the text repair order activity  -->
    <string name="Year_repair_order">Year :</string>

    <!-- textView for the text repair order activity  -->
    <string name="Mileage_repair_order">Mileage :</string>

    <!-- textView for the text repair order activity  -->
    <string name="VIN_repair_order">VIN :</string>

    <!-- textView for the text repair order activity  -->
    <string name="Color_repair_order">Color :</string>

    <!-- textView for the text repair order activity  -->
    <string name="License_repair_order">License :</string>

    <!-- textView for the text repair order activity  -->
    <string name="Gross">Gross</string>

    <!-- textView for the text Add edit repair order activity  -->
    <string name="Hours">Hours</string>

    <!-- textView for the text edit pay period dates activity  -->
    <string name="Current_label">Current Pay Period</string>

    <!-- textView for the text edit pay period dates activity  -->
    <string name="what_to_do_label">Select the fields you would like to adjust</string>

    <!-- textView for the text edit pay period dates activity  -->
    <string name="start_date">Start Date</string>

    <!-- textView for the text edit pay period dates activity  -->
    <string name="end_date">End Date</string>

    <!-- label for the text empty pay period dates activity  -->
    <string name="empty_pay_period">Empty Pay Period</string>

    <!-- textView for the text empty pay period dates activity  -->
    <string name="no_active_pay_period">No Active Pay Period</string>

    <!-- textView for the text empty pay period dates activity  -->
    <string name="empty_pay_period_info">Get started by adding the start and end date of your pay period</string>

    <!-- button for the text empty pay period dates activity  -->
    <string name="start_pay_period">Start Pay period</string>

    <!-- label for the text empty archive activity  -->
    <string name="empty_archive_label">Empty Archive</string>

    <!-- textView for the text empty archive activity  -->
    <string name="empty_archive">Archive</string>

    <!-- textView for the text empty archive activity  -->
    <string name="empty_archive_info">Past pay periods will be stored here</string>

    <!-- label for the text archived pay period activity  -->
    <string name="label_archived_pay_period">Archived Pay Period</string>

    <!-- dash for the text archived pay period activity  -->
    <string name="dash">-</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this repair order?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">DELETE</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">@android:string/cancel</string>



</resources>
