<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:visibility="visible"
tools:context="com.techtimeapp.techtime.view.view.view.PayPeriodActivity">


<TextView
    android:id="@+id/totalHours"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="0.0"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/totalHoursLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/totalHoursLabel"
    android:textAllCaps="true"
    android:textColor="@color/colorAccent"
    android:textSize="10sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/totalHours" />

<TextView
    android:id="@+id/totalRepairOrder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="0"
    android:textSize="15sp"
    app:layout_constraintEnd_toEndOf="@+id/totalRepairOrderLabel"
    app:layout_constraintStart_toStartOf="@+id/totalRepairOrderLabel"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/totalRepairOrderLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/totalRepairOrderLabel"
    android:textAllCaps="true"
    android:textColor="@color/colorAccent"
    android:textSize="10sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toStartOf="@+id/textView10"
    app:layout_constraintStart_toEndOf="@+id/totalHoursLabel"
    app:layout_constraintTop_toBottomOf="@+id/totalRepairOrder" />

<TextView
    android:id="@+id/totalGross"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:text="$0.00"
    android:textSize="15sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView10"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/totalGrossLabel"
    android:textAllCaps="true"
    android:textColor="@color/colorAccent"
    android:textSize="10sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/totalGross" />

<View
    android:id="@+id/divider"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/totalRepairOrderLabel" />


    <ListView
        android:id="@+id/listViewPayPeriod"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/add_repair_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="1.0" />




<Button
    android:id="@+id/add_repair_order"
    android:visibility="gone"
    style="@style/Widget.AppCompat.Button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:background="@drawable/ripple"
    android:fontFamily="@font/cooper_black"
    android:text="@string/add_repair_order"
    android:textAllCaps="true"
    android:textColor="@android:color/white"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textViewPayPeriodEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_active_pay_period"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textViewInfo"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/empty_pay_period_info"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPayPeriodEmpty" />

    <TextView
        android:id="@+id/textViewStart"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_date"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/textViewInfo"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />

    <TextView
        android:id="@+id/textViewEnd"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/end_date"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewStart"
        app:layout_constraintEnd_toEndOf="@+id/textViewInfo" />

    <Button
        android:id="@+id/startDateButton"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/ripple_date_picker"
        android:padding="5dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewStart"
        app:layout_constraintStart_toStartOf="@+id/textViewStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewStart" />

    <Button
        android:id="@+id/endDateButton"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/ripple_date_picker"
        android:padding="5dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewEnd"
        app:layout_constraintStart_toStartOf="@+id/textViewEnd"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnd" />


    <Button
        android:id="@+id/startPayPeriod"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple"
        android:fontFamily="@font/cooper_black"
        android:text="@string/start_pay_period"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</android.support.constraint.ConstraintLayout>